# tauri-template-app

./: .gitignore  LICENSE  README.md  index.html  package.json
.claude/: settings.local.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
